[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true 

[project]
name = "xProb"
version = "0.0.1"
authors = [
  { name="Xiaowei Song", email="dawnwei.song@gmail.com" },
]
description = "A machine learning library dealing with basic probablistic theories on random variables/processes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU AGPLv3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dawnsong/xProb"
Issues = "https://github.com/dawnsong/xProb/issues"



